--- a/src/index.njk
+++ b/src/index.njk
@@ -1,19 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Eleventy Starter Kit</title>
-        <meta charset="utf-8">
+---
+layout: default
+---
 
-        <link rel="stylesheet" href="{{ '/assets/styles/main.css' | url }}">
-        <script src="{{ '/assets/scripts/main.js' | url }}" defer></script>
-    </head>
+<h1>Hola mundo!</h1>
 
-    <body>
-        {% include "header.njk" %}
-        <h1>Hola mundo!</h1>
-
-        {% image "src/assets/img/alin-andersen-f0SgAs27BYI-unsplash.jpg", "photo of Alin Andersen of a Mountain on Austria", "image-class" %}
-
-    </body>
-
-</html>
+{% image "src/assets/img/alin-andersen-f0SgAs27BYI-unsplash.jpg", "photo of Alin Andersen of a Mountain on Austria", "image-class", "(min-width: 30em) 50vw, 100vw" %}
