--- a/src/index.njk
+++ b/src/index.njk
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-<h1>Hola mundo!</h1>
+<h1>Hello world!</h1>
 
 {% image "src/assets/img/alin-andersen-f0SgAs27BYI-unsplash.jpg", "photo of Alin Andersen of a Mountain on Austria", "image-class", "(min-width: 30em) 50vw, 100vw" %}
