🚧 WIP: Testing script functionality

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,7 +1,8 @@
 <header>
 HEADER HERE
+	<button class="js-toggle-nav">Toggle menu</button>
 
-	<nav>
+	<nav class="js-nav">
 		<a href="/es">ES</a>
 		<a href="/">EN</a>
 	</nav>
