--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -25,7 +25,7 @@
 
 		{% include "partials/footer.njk" %}
 
-		<script src="{{ '/assets/scripts/main.js' | url }}" defer></script>
+		<script defer src="{{ '/assets/scripts/main.js' | url }}"></script>
 	</body>
 
 </html>
