--- a/src/index.njk
+++ b/src/index.njk
@@ -4,4 +4,11 @@ layout: default
 
 <h1>Hello world!</h1>
 
-{% image "src/assets/img/alin-andersen-f0SgAs27BYI-unsplash.jpg", "photo of Alin Andersen of a Mountain on Austria", "image-class", "(min-width: 30em) 50vw, 100vw" %}
+{% image "./src/assets/img/alin-andersen-f0SgAs27BYI-unsplash.jpg", "photo of Alin Andersen of a Mountain on Austria", "image-class", "(min-width: 30em) 50vw, 100vw" %}
+
+{% image
+	"./src/assets/img/pexels-pixabay-45201.jpg",
+	"photo of a cat",
+	"image-class image-sm",
+	"(min-width: 30em) 50vw, 100vw"
+%}
