👌 IMPROVE: Add SVG inline in Image shortcode, better sizing and add id hash to image results

--- a/src/index.njk
+++ b/src/index.njk
@@ -12,3 +12,16 @@ layout: default
 	"image-class image-sm",
 	"(min-width: 30em) 50vw, 100vw"
 %}
+
+{% image
+	"./src/assets/img/egfinal.png",
+	"eg proto",
+	"image-class image-sm",
+	"(min-width: 50em) 50vw, 100vw"
+%}
+
+{% image
+	"./src/assets/img/crown-winner.svg",
+	"crow winner icon",
+	"icon"
+%}
