--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -15,6 +15,8 @@
 	</head>
 
 	<body>
+		{% iconsprite %}
+
 		<a href="#main-content" class="visually-hidden">Skip to main content</a>
 
 		{% include "partials/header.njk" %}
