--- a/src/index.njk
+++ b/src/index.njk
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+
 <h1>Hello world!</h1>
 
 {% image "./src/assets/img/alin-andersen-f0SgAs27BYI-unsplash.jpg", "photo of Alin Andersen of a Mountain on Austria", "image-class", "(min-width: 30em) 50vw, 100vw" %}
@@ -25,3 +26,13 @@ layout: default
 	"crow winner icon",
 	"icon"
 %}
+
+<div>
+{% icon "account" %}
+</div>
+
+
+
+<svg class="icon" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="crow winner icon">
+  <use xlink:href="/assets/icons.svg#svg-pencil-box"></use>
+</svg>
