👌 IMPROVE: Change content and improve locale functions

--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,9 +1,4 @@
-<header>
-HEADER HERE
-	<button class="js-toggle-nav">Toggle menu</button>
-
-	<nav class="js-nav">
-		<a href="/es">ES</a>
-		<a href="/">EN</a>
-	</nav>
-</header>
+<nav>
+   <a href="/">English</a>
+   <a href="/es">Español</a>
+</nav>
