--- a/src/_layouts/default.njk
+++ b/src/_layouts/default.njk
@@ -6,18 +6,12 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700&display=swap" rel="stylesheet">
-
 		<link rel="stylesheet" href="{{ '/assets/styles/main.css' | url }}">
 
 	</head>
 
-	<body>
+	<body class="lang-{{ lang }}">
 		{% iconsprite %}
-
-		<a href="#main-content" class="visually-hidden">Skip to main content</a>
 
 		{% include "partials/header.njk" %}
 
