--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -2,13 +2,24 @@ $font-family-sans-serif: system-ui, -apple-system, 'Helvetica Neue', Arial, sans
 $primary: hsl(48, 100%, 50%);
 $background: lightgray;
 
+:root {
+  --size-sm: clamp(0.7502rem, 0.7176rem + 0.1631vi, 0.844rem);
+  --size-md: clamp(1rem, 0.9565rem + 0.2174vi, 1.125rem);
+  --size-lg: clamp(1.333rem, 1.275rem + 0.2898vi, 1.4996rem);
+  --size-xl: clamp(1.7769rem, 1.6996rem + 0.3863vi, 1.999rem);
+  --size-2xl: clamp(2.3686rem, 2.2656rem + 0.5149vi, 2.6647rem);
+  --size-3xl: clamp(3.1573rem, 3.0201rem + 0.6864vi, 3.552rem);
+  --size-4xl: clamp(4.2087rem, 4.0257rem + 0.9149vi, 4.7348rem);
+}
+
 *,
 *::before,
 *::after {
 	box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
 	padding: 0;
 	margin: 0;
 }
@@ -17,11 +28,45 @@ body {
 	font-family: $font-family-sans-serif;
 	line-height: 1.5;
 	background-color: $background;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 2vh;
+	text-align: center;
+}
+
+p {
+	margin-block: 0;
+	text-wrap: balance;
+}
+
+header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	max-width: 42rem;
+	text-wrap: balance;
+	text-align: center;
+	margin-inline: auto;
+	gap: 0.5rem;
 }
 
 h1 {
-	font-size: clamp(1.5rem, 5vw, 4rem);
-	margin-block-end: 0;
+	font-size: var(--size-4xl);
+	margin-block: 0;
+}
+
+h2 {
+	font-size: var(--size-xl);
+	font-weight: 400;
+	color: #444;
+	margin-block: 0;
+}
+
+h1,
+h2 {
+	line-height: 1.2;
 }
 
 img {
@@ -40,15 +85,14 @@ picture {
 }
 
 nav {
-	background-color: $primary;
+	display: flex;
+	justify-content: center;
+	gap: 0.5rem;
+	position: absolute;
+	top: 0;
+	left: 0;
 	padding: 1rem;
-	margin-bottom: 1rem;
-
-	a {
-		color: #000;
-		text-decoration: none;
-		font-weight: bold;
-	}
+	font-size: var(--size-sm);
 }
 
 .visually-hidden {
@@ -61,16 +105,11 @@ nav {
 	overflow: hidden;
 }
 
-.image-xs {
-	max-width: 10rem;
-}
-
-.image-sm {
-	max-width: 30rem;
-}
-
-.image-xs {
-	max-width: 20rem;
+.icons {
+	display: flex;
+	justify-content: center;
+	gap: 1rem;
+	opacity: 0.3;
 }
 
 .icon {
@@ -85,12 +124,9 @@ nav {
 
 .main-content {
 	display: grid;
-	grid-template-columns:
-		[full-start] 4rem [wide-start] 4rem [content-start] 1fr [content-end] 4rem [wide-end] 4rem [full-end];
-}
-
-.main-content {
-	gap: 1em 0;
+	gap: 2rem 0;
+	grid-template-columns: 15vw [wide-start] 5vw [content-start] 1fr [content-end] 5vw [wide-end] 15vw;
+	font-size: var(--size-md);
 
 	& > * {
 		grid-column: content;
@@ -110,4 +146,9 @@ nav {
 .main-content > :not(.wide-width, .full-width),
 .full-width > :not(.wide-width, .full-width) {
 	grid-column: content;
+}
+
+.hero-image {
+	border-radius: 0.5em;
+	overflow: hidden;
 }
