--- a/src/index.njk
+++ b/src/index.njk
@@ -26,4 +26,13 @@ lang: en
 	A beacon for builders in the web's vast expanse,
 	It guides their creations with a steady, guiding glance.</p>
 
+{# Loop of Posts in posts folder #}
+<section>
+	{% for post in collections.post %}
+	<article>
+		<a href="{{ post.url }}">{{ post.data.title }}</a>
+	</article>
+	{% endfor %}
+</section>
+
 <cite>By Abel Cabans :)</cite>
